src/objects/Develop_Task__c.object
<CustomObject>
    <description>PMO:  Track Bugs, Enhancement Requests, and Action Items to be resolved during the Build, Validate, Deploy and/or Post-Deployment phases.</description>
    <fields>
        <fullName>Age_in_days__c</fullName>
        <formula>NOW() -  CreatedDate</formula>
        <label>Age (in days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assign_to_Premier_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assign to Premier Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Develop_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Interest_Score__c</fullName>
        <formula>Business_Value_Score__c + Data_Accuracy_Score__c + New_Process_Score__c + Productivity_Score__c + User_Friendliness_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Interest Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Value_Score__c</fullName>
        <formula>CASE(Business_Value__c, &quot;Evolution requested has a negative impact&quot;, -20, &quot;Positive impact on business value&quot;, 20,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Value Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Value__c</fullName>
        <label>Business Value</label>
        <picklist>
            <picklistValues>
                <fullName>No impact</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Evolution requested has a negative impact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Positive impact on business value</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Closed__c</fullName>
        <formula>CASE(Status__c  , 
&quot;Closed (Duplicate)&quot;, &quot;True&quot;,
&quot;Closed (Working As Designed)&quot;, &quot;True&quot;,
&quot;Closed (Question Answered)&quot;, &quot;True&quot;,
&quot;Closed (Verified)&quot;,&quot;True&quot;,
&quot;Closed (Not An Issue)&quot;,&quot;True&quot;,
&quot;False&quot;)</formula>
        <label>Closed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communication_Comments__c</fullName>
        <label>Communication Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Communication_needed__c</fullName>
        <label>Communication needed</label>
        <picklist>
            <picklistValues>
                <fullName>Home Page Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End User Documentation Update</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Data_Accuracy_Score__c</fullName>
        <formula>CASE(Data_Accuracy__c, &quot;Evolution requested has a negative impact on data quality&quot;, -20, &quot;Reduces risk of error on a importance information (example : direct link with cost or revenue)&quot;, 20,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Accuracy Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Accuracy__c</fullName>
        <label>Data Accuracy</label>
        <picklist>
            <picklistValues>
                <fullName>Not relevant</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Evolution requested has a negative impact on data quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reduces risk of error on a importance information (example : direct link with cost or revenue)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Derived_Urgency__c</fullName>
        <label>Derived Urgency</label>
        <picklist>
            <picklistValues>
                <fullName>Low (Nice to have)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Design_Comments__c</fullName>
        <label>Design Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Design_Impact__c</fullName>
        <label>Design Impact</label>
        <picklist>
            <picklistValues>
                <fullName>Workshop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication to Design Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gap Analysis with Release</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Dev_Complete_Date__c</fullName>
        <label>Dev Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Develop_Task__c</fullName>
        <label>Develop Task</label>
        <referenceTo>Develop_Task__c</referenceTo>
        <relationshipLabel>Develop Tasks</relationshipLabel>
        <relationshipName>Release_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Enhancement_Objective__c</fullName>
        <label>Enhancement Objective</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Functional_Impact_Analysis__c</fullName>
        <label>Functional Impact Analysis</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Global_Score__c</fullName>
        <formula>Business_Interest_Score__c * User_or_Group_Impacted_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(Business Interest Score) x (Scope of Change Impact Score)</inlineHelpText>
        <label>Global Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Impact_Details__c</fullName>
        <label>Impact Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Iteration__c</fullName>
        <label>Iteration</label>
        <referenceTo>Iteration__c</referenceTo>
        <relationshipLabel>Develop Tasks</relationshipLabel>
        <relationshipName>Develop_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LOE_Hours__c</fullName>
        <label>LOE (Hours)</label>
        <picklist>
            <picklistValues>
                <fullName>&lt; 1 hour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 to 8 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8+ to 40 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40+ to 160 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; 160 hours</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Module_Object__c</fullName>
        <description>Initailly, it list SFDC standard objects. It can be customize per each project.</description>
        <label>Module/Object</label>
        <picklist>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Role / Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preferences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aftersales Record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warranty Record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Key</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle / Asset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Literature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Literature Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaint (Inquiry) / Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>New_Process_Score__c</fullName>
        <formula>CASE( New_Process__c , &quot;High impact&quot;, 10, &quot;Low impact &quot;, 0,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Process Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Process__c</fullName>
        <label>New Process</label>
        <picklist>
            <picklistValues>
                <fullName>Not relevant</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Low impact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High impact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Peripheral_Application_Impact__c</fullName>
        <label>Peripheral Application Impact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority/Severity</label>
        <picklist>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Productivity_Score__c</fullName>
        <formula>CASE( Productivity__c , &quot;Evolution requested has a negative impact on productivity&quot;, -20, &quot;Functional response time or process duration reduced&quot;, 10,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Productivity Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Productivity__c</fullName>
        <label>Productivity</label>
        <picklist>
            <picklistValues>
                <fullName>Not relevant</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Evolution requested has a negative impact on productivity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Functional response time or process duration reduced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Raised_by__c</fullName>
        <inlineHelpText>Who is the original requester?</inlineHelpText>
        <label>Raised by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Release_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Idea_Number_of_Comments__c</fullName>
        <formula>TEXT(Related_Idea__r.NumComments)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Idea Number of Comments</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Idea__c</fullName>
        <label>Related Idea</label>
        <referenceTo>Idea</referenceTo>
        <relationshipName>Release_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requirement__c</fullName>
        <label>Requirement</label>
        <referenceTo>Requirement_UserStory__c</referenceTo>
        <relationshipLabel>Develop Tasks</relationshipLabel>
        <relationshipName>Release_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Root_Cause__c</fullName>
        <description>root cause of bug</description>
        <label>Root Cause</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Solution_Type__c</fullName>
        <description>It&apos;s used by consultant/tech consultant who takes resposibility of fixing DT.</description>
        <label>Solution Type</label>
        <picklist>
            <picklistValues>
                <fullName>Button&amp;Link</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DM Template</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fields</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Page Layout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profiles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trigger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visual Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Validation Rule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workflow</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Review / In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fix Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test in Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed (Duplicate)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed (Working As Designed)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed (Question Answered)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed (Verified)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed (Not An Issue)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT tested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Return to Dev</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requirement Generated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Steps_to_Reproduce__c</fullName>
        <label>Steps to Reproduce</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_Impact_Analysis__c</fullName>
        <label>Technical Impact Analysis</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Test_Result__c</fullName>
        <label>Test Result</label>
        <referenceTo>Test_Result__c</referenceTo>
        <relationshipName>Development_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Data Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bug Fix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Feature Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Data</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UAT_Dev_Task_Comments__c</fullName>
        <description>fill Test comments</description>
        <label>UAT Dev Task Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>User_Friendliness_Score__c</fullName>
        <formula>CASE( User_Friendliness__c , &quot;Evolution requested has a negative impact on user friendliness&quot;, -20, &quot;Positive impact on user friendliness&quot;, 20,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Friendliness Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Friendliness__c</fullName>
        <label>User Friendliness</label>
        <picklist>
            <picklistValues>
                <fullName>Not relevant</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Evolution requested has a negative impact on user friendliness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Positive impact on user friendliness</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Interface_Impact_Analysis__c</fullName>
        <label>User Interface Impact Analysis</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>User_or_Group_Impacted_Score__c</fullName>
        <formula>CASE(User_or_Group_Impacted__c , &quot;Business Unit&quot;, 1, &quot;Country&quot;, 5, &quot;Region&quot;,5, &quot;All&quot;, 10, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User or Group Impacted Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_or_Group_Impacted__c</fullName>
        <description>Which user or group is affected by the request</description>
        <inlineHelpText>Which user or group is affected by the request</inlineHelpText>
        <label>User or Group Impacted</label>
        <picklist>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Country</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Workaround__c</fullName>
        <label>Workaround?</label>
        <picklist>
            <picklistValues>
                <fullName>Not relevant</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Existing satisfactory alternative method</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reasonable workaround (effort to make it happen)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Difficult workaround (effort to make it happen)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No alternative or unacceptable alternative method</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Develop Task</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Subject__c</columns>
        <columns>Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Assigned_To__c</columns>
        <columns>Module_Object__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_UAT_DT</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Priority__c</columns>
        <columns>Derived_Urgency__c</columns>
        <columns>Raised_by__c</columns>
        <columns>Subject__c</columns>
        <columns>Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>10/14/2011 12:00 AM</value>
        </filters>
        <label>All UAT DT</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Closed_DT</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Subject__c</columns>
        <columns>Description__c</columns>
        <columns>Derived_Urgency__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>contains</operation>
            <value>Close</value>
        </filters>
        <label>Closed DT</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Engaged_DT</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Derived_Urgency__c</columns>
        <columns>Raised_by__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LOE_Hours__c</columns>
        <columns>Resolution__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notContain</operation>
            <value>Closed,New,On Hold</value>
        </filters>
        <label>Engaged DT</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Not_Closed_Bug</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Requirement__c</columns>
        <columns>Subject__c</columns>
        <columns>Description__c</columns>
        <columns>Priority__c</columns>
        <columns>LOE_Hours__c</columns>
        <columns>Resolution__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Develop_Task__c.Bug</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notContain</operation>
            <value>Closed</value>
        </filters>
        <label>Not Closed Bug</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>On_Hold_DT</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Subject__c</columns>
        <columns>Priority__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>On Hold</value>
        </filters>
        <label>On Hold DT</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Open_DT</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Subject__c</columns>
        <columns>Description__c</columns>
        <columns>Functional_Impact_Analysis__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>10/14/2011 12:00 AM</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notContain</operation>
            <value>Close</value>
        </filters>
        <label>Open DT</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>UAT_BUG_List</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <columns>Steps_to_Reproduce__c</columns>
        <columns>Subject__c</columns>
        <columns>Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Priority__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>10/8/2011 12:00 AM</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Develop_Task__c.Bug</value>
        </filters>
        <label>UAT BUG List</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DT-{YY}{MM}{0000}</displayFormat>
        <label>Task Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Develop Tasks</pluralLabel>
    <recordTypes>
        <fullName>Action_Item</fullName>
        <active>true</active>
        <description>Request New Data, or ask (Confirm) requirements with relative owners</description>
        <label>Action Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>Bug</fullName>
        <active>true</active>
        <description>Error, exception, defect founds and data issues tracking</description>
        <label>Bug</label>
    </recordTypes>
    <recordTypes>
        <fullName>Enhancement_Request</fullName>
        <active>true</active>
        <description>New Feature Request or change the existing request, may generate new requirements</description>
        <label>Enhancement Request</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>